# florarpc

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AppleInfo.plist  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  NOTICE  README.md  app.manifest  flora_constants.h.in  main.cpp  resources.qrc  resources.rc  resources.rc.in  third_party_licenses.md  vcpkg_packages.txt
.github/workflows/: build.yml
entity/: Certificate.cpp  Certificate.h  Metadata.cpp  Metadata.h  Method.cpp  Method.h  Preferences.cpp  Preferences.h  Protocol.cpp  Protocol.h  Request.cpp  Request.h  Server.cpp  Server.h  Session.cpp  Session.h
js/: to_grpcurl.js
platform/: RootCertificates.h
platform/mac/: NSWindow.h  NSWindow.mm  RootCertificates.mm
platform/windows/: RootCertificates.cpp
proto/florarpc/: descriptor_exports.proto  preferences.proto  uuid.proto  version.proto  workspace.proto
proto/google/protobuf/: README
resources/appicon/: FloraRPC.icns
ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CertsEditControl.cpp  CertsEditControl.h  CertsEditControl.ui  CertsEditDialog.cpp  CertsEditDialog.h  CertsEditDialog.ui  Editor.cpp  Editor.h  Editor.ui  ImportsManageDialog.cpp  ImportsManageDialog.h  ImportsManageDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_Plugin.cpp  MetadataEdit.cpp  MetadataEdit.h  MetadataEdit.ui  MultiPageJsonView.cpp  MultiPageJsonView.h  MultiPageJsonView.ui  ProtocolModel.cpp  ProtocolModel.h  ProtocolTreeModel.cpp  ProtocolTreeModel.h  ServerEditDialog.cpp  ServerEditDialog.h  ServerEditDialog.ui  ServersManageDialog.cpp  ServersManageDialog.h  ServersManageDialog.ui
ui/event/: WorkspaceModifiedEvent.cpp  WorkspaceModifiedEvent.h
ui/task/: ImportProtosTask.cpp  ImportProtosTask.h
util/: DescriptorPoolProxy.cpp  DescriptorPoolProxy.h  GrpcUtility.cpp  GrpcUtility.h  ProtobufIterator.h  ProtobufJsonPrinter.cpp  ProtobufJsonPrinter.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
util/importer/: FloraSourceTree.cpp  FloraSourceTree.h  QFileInputStream.cpp  QFileInputStream.h  WellKnownSourceTree.h
